# OOP-24-Homework-2

./: .gitignore  CMakeLists.txt  Criteria1Func.cpp  Criteria1Func.h  Criteria2Func.cpp  Criteria2Func.h  Criteria3Func.cpp  Criteria3Func.h  CriteriaPartialFunction.hpp  CriteriaType.cpp  CriteriaType.h  Main.cpp  MaxPartialFunction.cpp  MaxPartialFunction.h  MinPartialFunction.cpp  MinPartialFunction.h  PartialFunction.h  PartialFunctionProcessor.cpp  PartialFunctionProcessor.h  README.md  generateBinary.cpp  resultPair.h
